@@ -102,7 +102,6 @@
     <File name="Gui/CSharpTextEditorIndentation.cs" subtype="Code" buildaction="Compile" />
     <File name="Parser/NRefactoryParser.cs" subtype="Code" buildaction="Compile" />
     <File name="Gui/EventCreationCompletionData.cs" subtype="Code" buildaction="Compile" />
-    <File name="Gui/CodeTemplateCompletionData.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="False" refto="MonoDevelop.Core" />
