@@ -1,3 +1,8 @@
+2008-11-12  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.Ide.CodeTemplates/CodeTemplateService.cs: Move template
+	completion code to MonoDevelop.Ide.
+
 2008-11-12  Mike Krüger  <mkrueger@novell.com>
 
 	* options/MonoDevelop-templates.xml: renamed templates *again*
